# botbell-python

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml
botbell/: __init__.py  client.py  exceptions.py  models.py  webhook.py
tests/: test_client.py  test_webhook.py
